<resources>
    <string name="app_name">PickDays</string>
    <string name="check_more">查看更多</string>
    <string name="fill_available_time">開始填寫</string>
    <string name="check_available_time">確認提交表單</string>
    <string name="start_available_time">開啟新表單</string>
    <string name="default_web_client_id">80781943227-3nd3k4dp1nutu75onq30obohnoj0p26r.apps.googleusercontent.com</string>
    <string name="create_new_appointment">開啟新的時間表</string>
    <string name="start_date">開始日期</string>
    <string name="end_date">結束日期</string>
    <string name="invitation">受邀者</string>
    <string name="confirm_to_send">確定送出</string>
    <string name="please_fill_all_info">請填寫所有資訊</string>
    <string name="confirm">確定</string>
    <string name="is_over_two_years">時間區間超過2年</string>
    <string name="start_date_error">開始日期晚於結束日期</string>
    <string name="please_choose_start_date">請選擇開始日期</string>
    <string name="please_choose_end_date">請選擇結束日期</string>
</resources>