<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnsAvailable"
        android:layout_margin="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tvFillAvailableTime"
            android:text="@string/fill_available_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/bg_r15_ccc1bb"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvCheckAvailableTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tvCheckAvailableTime"
            android:text="@string/check_available_time"
            android:layout_marginVertical="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/bg_r15_ccc1bb"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tvFillAvailableTime"
            app:layout_constraintBottom_toTopOf="@+id/tvStartAvailableTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tvStartAvailableTime"
            android:text="@string/start_available_time"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/bg_r15_ccc1bb"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tvCheckAvailableTime"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>