<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_new_appointment_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_appointment_form.NewAppointmentFormActivity">

    <include
        android:id="@+id/actionBarNewAppointmentForm"
        layout="@layout/layout_action_bar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@+id/actionBarNewAppointmentForm"
        app:layout_constraintBottom_toTopOf="@+id/tvConfirmCreateNewAppointmentForm"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tvNewAppointmentStartDateTitle"
            style="@style/contentTextStyle"
            android:text="@string/start_date"
            app:layout_constraintTop_toTopOf="@+id/tvNewAppointmentStartDate"
            app:layout_constraintBottom_toBottomOf="@+id/tvNewAppointmentStartDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvNewAppointmentStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvNewAppointmentStartDate"
            style="@style/contentTextStyle"
            android:gravity="center"
            android:background="@drawable/bg_r10_grey_e1e1e1"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvNewAppointmentStartDateTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="55dp"/>

        <TextView
            android:id="@+id/tvNewAppointmentEndDateTitle"
            style="@style/contentTextStyle"
            android:text="@string/end_date"
            app:layout_constraintTop_toTopOf="@+id/tvNewAppointmentEndDate"
            app:layout_constraintBottom_toBottomOf="@+id/tvNewAppointmentEndDate"
            app:layout_constraintLeft_toLeftOf="@+id/tvNewAppointmentStartDateTitle"
            app:layout_constraintRight_toRightOf="@+id/tvNewAppointmentStartDateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvNewAppointmentEndDate"
            style="@style/contentTextStyle"
            android:gravity="center"
            android:background="@drawable/bg_r10_grey_e1e1e1"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNewAppointmentStartDate"
            app:layout_constraintLeft_toLeftOf="@+id/tvNewAppointmentStartDate"
            app:layout_constraintRight_toRightOf="@+id/tvNewAppointmentStartDate"
            android:layout_width="0dp"
            android:layout_height="55dp"/>

        <TextView
            android:id="@+id/tvNewAppointmentInvitationTitle"
            style="@style/contentTextStyle"
            android:text="@string/invitation"
            app:layout_constraintTop_toTopOf="@+id/tvNewAppointmentInvitation"
            app:layout_constraintBottom_toBottomOf="@+id/tvNewAppointmentInvitation"
            app:layout_constraintLeft_toLeftOf="@+id/tvNewAppointmentStartDateTitle"
            app:layout_constraintRight_toRightOf="@+id/tvNewAppointmentStartDateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvNewAppointmentInvitation"
            style="@style/contentTextStyle"
            android:gravity="center"
            android:background="@drawable/bg_r10_grey_e1e1e1"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNewAppointmentEndDate"
            app:layout_constraintLeft_toLeftOf="@+id/tvNewAppointmentStartDate"
            app:layout_constraintRight_toRightOf="@+id/tvNewAppointmentStartDate"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvConfirmCreateNewAppointmentForm"
        android:textColor="@color/yellow_fffc427"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/bg_r10_grey_3c3c3c"
        android:gravity="center"
        android:text="@string/confirm_to_send"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="55dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>